// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package tokenserver;

import "google/protobuf/timestamp.proto";

// ServiceAccount describes a Cloud IAM Service Account.
//
// See https://cloud.google.com/iam/reference/rest/v1/projects.serviceAccounts#ServiceAccount
message ServiceAccount {
  string project_id = 1;       // the id of the project that owns the service account
  string unique_id = 2;        // the unique and stable id of the service account
  string email = 3;            // the email address of the service account
  string display_name = 4;     // the description of the service account
  string oauth2_client_id = 5; // the OAuth2 client id for the service account

  // The fields below are provided by the token server itself, not by Cloud IAM.

  string fqdn = 6;                          // FQDN of an associated host
  google.protobuf.Timestamp registered = 7; // when the account was added
}
