// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// Copied from https://chromium.googlesource.com/infra/infra/+/master/infra_libs/ts_mon/protos/

syntax = "proto3";

package ts_mon.proto;

message Task {
  string service_name = 20;
  string job_name = 30;
  string data_center = 40;
  string host_name = 50;
  int32 task_num = 60;
}
